Fixed dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,10 @@
 	--column-margin-top: 4rem;
 }
 
+html .dark-mode {
+	background-color: black;
+}
+
 body {
 	min-height: 100vh;
 	margin: 0;
